--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>¿Quieres ser mi novia ?</title>
+  <title>¿Quieres ser mi amiga ?</title>
   <style>
     body {
       margin: 0;
@@ -77,7 +77,7 @@
 </head>
 <body>
     <div id="container">
-      <h1>¿Quieres ser mi novia?</h1>
+      <h1>¿Quieres ser mi amiga ?</h1>
       <div id="buttons">
         <button onclick="accionParaCuandoEllaDigaQueSi()" id="btnSi">Sí</button>
         <button id="btnNo" onmouseover="mueveElBoton()">No</button>
@@ -87,7 +87,7 @@
   
     <script>
       function accionParaCuandoEllaDigaQueSi() {
-        const respuesta = confirm("¿Estás segura de querer ser mi novia?");
+        const respuesta = confirm("¿Estás segura de querer ser mi amiga?");
         if (respuesta) {
           // Redireccionar a la nueva página si responde "Sí"
           window.location.href = "opcionsi.html";
