--- a/opcionsi.html
+++ b/opcionsi.html
@@ -41,7 +41,7 @@
   <div id="container">
     <h1>¡Gracias por aceptar ser mi amiga!</h1>
     <p>Quiero que sepas que eres una persona muy especial para mí y estoy muy emocionado de comenzar esta hermosa amistad contigo.</p>
-    <img src="img/bar.jpg" alt="Pareja feliz" width="400">
+    <img src="img/ba.jpg" alt="Pareja feliz" width="400">
   </div>
 </body>
 </html>
