--- a/opcionsi.html
+++ b/opcionsi.html
@@ -39,8 +39,8 @@
 </head>
 <body>
   <div id="container">
-    <h1>¡Gracias por aceptar ser mi amiga!</h1>
-    <p>Quiero que sepas que eres una persona muy especial para mí y estoy muy emocionado de comenzar esta hermosa amistad contigo.</p>
+    <h1>¡Gracias por aceptar ser mi novia!</h1>
+    <p>Quiero que sepas que eres una persona muy especial para mí y estoy muy emocionado de comenzar esta hermosa relación contigo.</p>
     <img src="img/bar.jpg" alt="Pareja feliz" width="400">
   </div>
 </body>
