--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   
     <script>
       function accionParaCuandoEllaDigaQueSi() {
-        const respuesta = confirm("¿Estás segura de querer ser mi amiga?");
+        const respuesta = confirm("¿Estás segura de querer ser mi novia ?");
         if (respuesta) {
           // Redireccionar a la nueva página si responde "Sí"
           window.location.href = "opcionsi.html";
